# my-chart

./: .env.example  .gitignore  CHANGELOG.md  README.md  dev.sh  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/skills/exit/: SKILL.md
.claude/skills/moai-library-pykrx/: SKILL.md
.claude/skills/moai-library-tradingview/: SKILL.md
.moai/: manifest.json
.moai/config/sections/: project.yaml
.moai/learning/: electron-migration-feasibility.md  electron-tech-stack-deep-dive.md  single-command-multi-process.md  srim-dashboard-spec.md
.moai/project/: README.md  fnguide-api-reference.md  product.md  retrospective-analysis.md  structure.md  tech.md
.moai/project/codemaps/: data-flow.md  dependencies.md  entry-points.md  (+2 more)
Input/: sectormap.xlsx  sectormap_original.xlsx  ~$sectormap_original.xlsx
backend/: __init__.py  deps.py  main.py
backend/routers/: __init__.py  analysis.py  chart.py  db.py  market.py  screen.py  sectors.py  stage.py
backend/schemas/: __init__.py  analysis.py  chart.py  db.py  market.py  screen.py  sector.py  sector_advanced.py  stage.py
backend/services/: __init__.py  analysis_service.py  chart_service.py  db_service.py  market_service.py  meta_service.py  progress_store.py  screen_service.py  sector_advanced_service.py  sector_detail_service.py  sector_ranking_service.py  sector_service.py  stage_service.py
backend/tests/: test_sector_advanced.py  test_sector_detail_service.py
docs-repo/: update-prd.md
fnguide/: __init__.py  analysis.py  analyzer.py  crawler.py  dashboard.py  parser.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  AppContent.tsx  test-setup.ts
my_chart/: __init__.py  config.py  indicators.py  krx_session.py  price.py  registry.py
my_chart/analysis/: market.py  market_breadth.py  reports.py  sector_advanced.py  sector_metrics.py  stage_classifier.py
my_chart/charting/: bulk.py  single.py  styles.py
my_chart/db/: daily.py  queries.py  weekly.py
my_chart/export/: pptx_builder.py  tradingview.py
my_chart/screening/: daily_filters.py  high_stocks.py  momentum.py
tests/: conftest.py  test_analysis_api.py  test_api.py  test_chart_service.py  test_config.py  test_daily.py  test_db_service.py  test_krx_session.py  test_market_api.py  test_market_breadth.py  test_meta_service.py  test_price.py  test_registry.py  test_rs_line.py  test_screen_codes_filter.py  test_screen_service.py  test_sector_detail.py  test_sector_metrics.py  test_stage_classifier.py
tests/fnguide/: conftest.py  test_analysis.py  test_analyzer.py  test_crawler.py  test_dashboard.py  test_dashboard_characterize.py  test_dashboard_unit.py  test_parser.py
(+135 files in other folders)
