[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kr-stock-screener"
version = "0.1.0"
description = "Korean stock screener web service wrapping my_chart"
requires-python = ">=3.13"
dependencies = [
    # Web service
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    # my_chart core deps
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.5",
    "mplfinance>=0.12",
    "pykrx>=1.0",
    "requests>=2.28",
    "curl_cffi>=0.5",
    "openpyxl>=3.0",
    "xlrd>=2.0",
    "xlsxwriter>=3.0",
    "lxml>=4.9",
    "beautifulsoup4>=4.12",
    "python-pptx>=0.6",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_chart*", "backend*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
